--- a/jp/classes/stat2/contents/R/my-markdown.css
+++ b/jp/classes/stat2/contents/R/my-markdown.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Helvetica, arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Hiragino Sans", IPAex, "メイリオ", Meiryo, sans-serif;
+	font-family: Helvetica, arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Hiragino Sans", IPAex, "Yu Gothic", "メイリオ", Meiryo, sans-serif;
 	font-size: 16px;
 	line-height: 150%;
 	padding-top: 10px;
